--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-container">
+<div class="navbar-container treasure-map-font">
   <div class="container-fluid p-0 d-none d-lg-block">
     <div class="row no-gutters m-0">
       <div class="col-md-4 d-flex justify-content-around align-items-center py-2">
