--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,7 +110,7 @@
 }
 
 body {
-  background-image: url("dnd-character-creation-d20.jpg");
+  background-image: url("manaki.jpg");
   background-color: #cccccc;
   background-size: cover;
   background-position: center;
