--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -136,8 +136,10 @@ td {
 }
 
 .card {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-image: url('parchment.jpeg');
+  color: rgb(0, 0, 0);
   border-radius: 8px;
+  font-size: 20px;
 }
 
 .inner_bg {
@@ -166,7 +168,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  color: white;
+  color: black;
  }
 
 .btn {
