--- a/app/views/party/index.html.erb
+++ b/app/views/party/index.html.erb
@@ -10,16 +10,17 @@
         <div class="col-lg-6 col-md-12 mb-3">
           <div id="character-<%= character.id %>" class="card h-100">
             <div class="card-body d-flex">
-              <% if character.image_url %>
-                <div class="col">
-                  <%= image_tag("http://127.0.0.1:3000/#{character.image_url}", alt: character.name, class: "img-fluid card-img-start") %>
-                </div>
-              <% end %>
               <div class="col" style="display: flex; flex-direction: column; justify-content: center;">
                 <h3 class="card-title"><%= character.name %></h3>
                 <p class="card-text">Race: <%= character.dnd_race %></p>
                 <p class="card-text">Class: <%= character.dnd_class %></p>
               </div>
+              <% if character.image_url %>
+                <div class="col">
+                  <%= image_tag("#{ENV['API_BASE_URL']}#{character.image_url}", alt: character.name, class: "img-fluid card-img-start") %>
+                </div>
+                </div>
+              <% end %>
             </div>
           </div>
         </div>
