Update backend facade and service and view to expect a users email when inviting a user to a campaign

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -8,7 +8,7 @@
         <h3>Campaign Name</h3>
         <%= form.text_field :name, class: "form-control" %> <br><br><br>
 
-        <h3>Invite Players by ID</h3>
+        <h3>Invite Players by Email</h3>
         Player 1: <%= form.text_field :player_1, class: "form-control" %> <br><br>
         Player 2: <%= form.text_field :player_2, class: "form-control" %> <br><br>
         Player 3: <%= form.text_field :player_3, class: "form-control" %> <br><br>
