--- a/app/views/management/edit.html.erb
+++ b/app/views/management/edit.html.erb
@@ -65,47 +65,47 @@
             <div class="container-flex">
               <div class="form-group">
                 <%= form.label :food, "Food:", class: "management-label" %>
-                <%= form.number_field :food, value: @management_form.food, class: "management-qty-field" %>
+                <%= form.number_field :food, value: @management_form.food, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :farmed_goods, "Farmed Goods:", class: "management-label" %>
-                <%= form.number_field :farmed_goods, value: @management_form.farmed_goods, class: "management-qty-field" %>
+                <%= form.number_field :farmed_goods, value: @management_form.farmed_goods, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :foraged_goods, "Foraged Goods:", class: "management-label" %>
-                <%= form.number_field :foraged_goods, value: @management_form.foraged_goods, class: "management-qty-field" %>
+                <%= form.number_field :foraged_goods, value: @management_form.foraged_goods, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :wood, "Wood:", class: "management-label" %>
-                <%= form.number_field :wood, value: @management_form.wood, class: "management-qty-field" %>
+                <%= form.number_field :wood, value: @management_form.wood, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :stone, "Stone:", class: "management-label" %>
-                <%= form.number_field :stone, value: @management_form.stone, class: "management-qty-field" %>
+                <%= form.number_field :stone, value: @management_form.stone, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :metal, "Metal:", class: "management-label" %>
-                <%= form.number_field :metal, value: @management_form.metal, class: "management-qty-field" %>
+                <%= form.number_field :metal, value: @management_form.metal, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :cloth, "Cloth:", class: "management-label" %>
-                <%= form.number_field :cloth, value: @management_form.cloth, class: "management-qty-field" %>
+                <%= form.number_field :cloth, value: @management_form.cloth, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :animal_products, "Animal Products:", class: "management-label" %>
-                <%= form.number_field :animal_products, value: @management_form.animal_products, class: "management-qty-field" %>
+                <%= form.number_field :animal_products, value: @management_form.animal_products, class: "management-qty-field", step: 10 %>
               </div>
 
               <div class="form-group">
                 <%= form.label :monster_parts, "Monster Parts:", class: "management-label" %>
-                <%= form.number_field :monster_parts, value: @management_form.monster_parts, class: "management-qty-field" %>
+                <%= form.number_field :monster_parts, value: @management_form.monster_parts, class: "management-qty-field", step: 10 %>
               </div>
             </div>
 
