--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,9 +10,9 @@
       <%= form.password_field :password %> <br>
       <br>
       <%= form.submit "Login" %>
-    <% end %>
+    <% end %> </br>
 
-    <%= link_to "Create an Account", new_user_path %>
+    <%= link_to "Create an Account", new_user_path, style: "color: black;" %>
     <br>
     <br>
 
